--- a/index.html
+++ b/index.html
@@ -44,33 +44,98 @@
 
     <section class="vision-future">
         <div>
-        <h4 class="vision-future-title">The Vision of Future</h4>
-        <p class="vision-description">Bangladesh 2.0 aims to redefine the nation's trajectory by h cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development</p>
-       </div>
+            <h4 class="vision-future-title">The Vision of Future</h4>
+            <p class="vision-description">Bangladesh 2.0 aims to redefine the nation's trajectory by h cutting-edge
+                technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable
+                energy, digital transformation, and robust infrastructure, the country is set to become a global model
+                of development</p>
+        </div>
         <div class="vision-container">
-            
-                <div class="vision-digitrans">
-                    <img src="assets/card-icon.png" alt="">
-                    <h4>Digital Transformation</h4>
-                    <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
-                    <button class="btn-digitrans">Learn More</button>
-                </div>
 
-                <div class="vision-greenen">
-                    <img src="assets/card-icon.png" alt="">
-                    <h4 class="vision-name">Green Energy</h4>
-                    <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
-                    <button class="btn-greenen">Learn More</button>
-                </div>
+            <div class="vision-digitrans">
+                <img src="assets/card-icon.png" alt="">
+                <h4>Digital Transformation</h4>
+                <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and access
+                    to services for all citizens.</p>
+                <button class="btn-digitrans">Learn More</button>
+            </div>
 
-                <div class="vision-moderninfra">
-                    <img src="assets/card-icon.png" alt="">
-                    <h4 class="vision-name">Modern Infrastructure</h4>
-                    <p class="vision-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
-                    <button class="btn-moderninfra">Learn More</button>
-                </div>
+            <div class="vision-greenen">
+                <img src="assets/card-icon.png" alt="">
+                <h4 class="vision-name">Green Energy</h4>
+                <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and
+                    eco-friendly future.</p>
+                <button class="btn-greenen">Learn More</button>
+            </div>
+
+            <div class="vision-moderninfra">
+                <img src="assets/card-icon.png" alt="">
+                <h4 class="vision-name">Modern Infrastructure</h4>
+                <p class="vision-description">Building state-of-the-art infrastructure to support economic growth and
+                    global competitiveness.</p>
+                <button class="btn-moderninfra">Learn More</button>
+            </div>
 
         </div>
+
+    </section>
+
+    <!-- 3. Recent News -->
+    <section class=news-folder>
+        <section class="recent-news">
+            <h4 class="news-type"> Recent News</h4>
+            <p class="vision-description">By embracing innovation, empowering communities, and strengthening resilience,Bangladesh is charting a new course for the future. With a focus on advancing education, improving healthcare, and enhancing social welfare, the nation is working towards becoming a global leader in human-centered development, ensuring prosperity and equity for all.</p>
+        </section>
+
+        <section class="news-list">
+            <!-- <div class="news-list"> -->
+                <div>
+                    <img class="img-satellite" src="assets/satelite.png" alt="">
+                </div>
+
+                <div>
+                    <h4 class="news-tittle">Bangladesh Launches New Satellite</h4>
+                    <img class="logo-aljazeera" src="assets/al-jazeera.png" alt="">
+                    <div class="date-time news-detail">
+                        <span class="date">Date: 05/01/2025</span>
+                        <span class="time">Time: 10:25 PM</span>
+                    </div>
+
+                    <p class="news-detail">Not until the creation and maintenance of decent conditions of life for all
+                        people are recognized and accepted as a common obligation of all people and all countries—not until
+                        then shall we, with a certain degree of justification, be able to speak of humankind as civilized
+                    </p>
+
+                    <button class="btn-readmore">Read More</button>
+
+                </div>
+            <!-- </div> -->
+        </section>
+
+        <section class="news-list2">
+            <!-- <div class="news-list2"> -->
+                <div>
+                    <img class="img-satellite" src="assets/satelite.png" alt="">
+                </div>
+
+                <div>
+                    <h4 class="news-tittle">New Satellite Launched by Bangladesh</h4>
+                    <img class="logo-aljazeera" src="assets/al-jazeera.png" alt="">
+                    <div class="date-time news-detail">
+                        <span class="date">Date: 05/01/2025</span>
+                        <span class="time">Time: 10:25 PM</span>
+                    </div>
+
+                    <p class="news-detail">
+                        True civilization can only be claimed when the creation and preservation of dignified living conditions for all people are universally recognized and embraced as a shared responsibility across nations. Only then can we justifiably consider humanity as truly civilized.
+                    </p>
+
+                    <button class="btn-readmore">Read More</button>
+
+                </div>
+            <!-- </div> -->
+
+        </section>
 
     </section>
 
