--- a/index.html
+++ b/index.html
@@ -134,10 +134,31 @@
 
                 </div>
             <!-- </div> -->
-
         </section>
 
     </section>
+
+ <!-- 4. DONATE TODAY -->
+
+    <section class="donate">
+        
+            <h4 class="vision-future-title">Donate Today</h4>
+            <p class="vision-description">Every contribution, no matter how small, can make a big difference for the flood victims in Feni; please donate today to support their recovery and rebuild their lives.</p>
+
+        <div class="donate-preset">
+            <div class="donate-amount"><button>100 Taka</button></div>
+            <div class="donate-amount"><button>200 Taka</button></div>
+            <div class="donate-amount"><button>500 Taka</button></div>
+            <div class="donate-amount"><button>1000 Taka</button></div>
+         
+        </div>
+
+        <input class="other-amount" type="text" placeholder="Other Amount (Taka)"> 
+        <br>
+        <Button class="btn-donate">Done Now</Button>
+
+    </section>
+
 
     <main>
 
