4. donate today (done)

--- a/index.html
+++ b/index.html
@@ -141,17 +141,18 @@
  <!-- 4. DONATE TODAY -->
 
     <section class="donate">
-        
+        <div>
             <h4 class="vision-future-title">Donate Today</h4>
             <p class="vision-description">Every contribution, no matter how small, can make a big difference for the flood victims in Feni; please donate today to support their recovery and rebuild their lives.</p>
 
-        <div class="donate-preset">
+        </div>
+
+            <div class="donate-preset">
             <div class="donate-amount"><button>100 Taka</button></div>
             <div class="donate-amount"><button>200 Taka</button></div>
             <div class="donate-amount"><button>500 Taka</button></div>
             <div class="donate-amount"><button>1000 Taka</button></div>
-         
-        </div>
+            </div>
 
         <input class="other-amount" type="text" placeholder="Other Amount (Taka)"> 
         <br>
@@ -159,11 +160,11 @@
 
     </section>
 
+    <section>
 
-    <main>
 
+    </section>
 
-    </main>
 
 </body>
 
