--- a/index.html
+++ b/index.html
@@ -161,7 +161,21 @@
     </section>
 
     <section>
+        <form class="subscribtion" action="">
+            <div >
+                <h2>Subscribe Newsletter</h2>
+                <p >Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+            </div>
 
+            <div>
+
+                <input type="email" name="email" placeholder="Enter your email here">
+                <input type="subscribe">
+                <p>We promise not to spam you!</p>
+            </div>
+        
+
+        </form>
 
     </section>
 
